test/typecheck/pass/as_pattern.sail

val int -> int effect pure test

function test ((int) _ as x) =
{
  x
}
