test/typecheck/fail/eff_undef.sail

val unit -> unit effect pure test

function unit test () =
{
  undefined
}
